--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack</title>
+    <title>Timer</title>
   </head>
 
-  <body></body>
+  <body>
+    <h1 class="title">Countdown to New Year 2021 &#127877;</h1>
+    <span class="img"
+      ><img src="https://reklama-no.ru/smiles/sanki.gif" alt="go go"
+    /></span>
+
+    <div class="timer" id="timer-1">
+      <div class="field">
+        <span class="value" data-value="days">00</span>
+        <span class="label">Days</span>
+      </div>
+
+      <div class="field">
+        <span class="value" data-value="hours">00</span>
+        <span class="label">Hours</span>
+      </div>
+
+      <div class="field">
+        <span class="value" data-value="mins">00</span>
+        <span class="label">Minutes</span>
+      </div>
+
+      <div class="field">
+        <span class="value" data-value="secs">00</span>
+        <span class="label">Seconds</span>
+      </div>
+    </div>
+  </body>
 </html>
